[package]
name = "storm-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bramble-sync = { git = "https://gitlab.com/stormproject/bramble.git", branch = "comp4300" }
bramble-rendezvous = { git = "https://gitlab.com/stormproject/bramble.git", branch = "comp4300" }
bramble-common = { git = "https://gitlab.com/stormproject/bramble.git", branch = "comp4300" }
bramble-crypto = { git = "https://gitlab.com/stormproject/bramble.git", branch = "comp4300" }
bramble-transport = { git = "https://gitlab.com/stormproject/bramble.git", branch = "comp4300" }
log = "0.4.17"
linked_hash_set = "0.1.4"
linked-hash-map = "0.5.6"
bisetmap = "0.1.6"
async-select-all = "0.1.0"
env_logger = "0.9.3"
rand = "0.8.5"
portpicker = "0.1.1"
slice_as_array = "1.1.0"
futures = "0.3.0"
ed25519-dalek = "1.0.1"
base64 = "0.13"
async-compat = "0.2.1"
libtor = "47.8.0+0.4.7.x"
torcc-rs = "0.1.1"
tokio = { version = "1.20.1", features = ["full"] }
gag = "1.0.0"
async-socks5 = "0.5.1"
async-channel = "1.7.1"
serde_json = "1.0.87"
itertools = "0.10.5"
tokio-socks = "0.5.1"
futures-timer = "3.0.2"
torut = "0.2.1"
#torut = { path = '../../torut' }
fallible-iterator = "0.2.0"
rusqlite = {version = "0.28.0", features = ["bundled", "vtab", "array"]}
bimap = "0.6.2"
