
[package]
name = "storm-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#storm-app = { path = "storm-app", version = "0.1.0" }
#storm-platform = { path = "storm-platform", version = "0.1.0" }
shellfish = { version = "0.7.0", features = ["async", "app"] }
hex = "0.4.3"
slice_as_array = "1.1.0"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "rt", "macros"] }
futures = "0.3.0"
storm-backend = { path = "../storm-backend" }
