[package]
name = "storm_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bramble-rendezvous = { path = '../../bramble-rs/bramble-rendezvous' }
#bramble-transport = "0.1.0"
futures = "0.3.0"
libtor = "47.8.0+0.4.7.x"
torcc-rs = "0.1.1"
tokio = { version = "1.20.1", features = ["full"] }
gag = "1.0.0"
async-socks5 = "0.5.1"
tokio-socks = "0.5.1"
futures-timer = "3.0.2"
