[package]
name = "storm_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bramble-rendezvous = { path = '../../bramble-rs/bramble-rendezvous' }
bramble-common = { path = '../../bramble-rs/bramble-common' }
async-fuse = "0.11.2"
bramble-crypto = { path = '../../bramble-rs/bramble-crypto' }
bramble-transport = { path = '../../bramble-rs/bramble-transport' }
bramble-sync = { path = '../../bramble-rs/bramble-sync' }
log = "0.4.17"
linked_hash_set = "0.1.4"
linked-hash-map = "0.5.6"
async-select-all = "0.1.0"
env_logger = "0.9.3"
rand = "0.8.5"
portpicker = "0.1.1"
slice_as_array = "1.1.0"
#bramble-transport = "0.1.0"
futures = "0.3.0"
ed25519-dalek = "1.0.1"
base64 = "0.13"
async-compat = "0.2.1"
libtor = "47.8.0+0.4.7.x"
torcc-rs = "0.1.1"
tokio = { version = "1.20.1", features = ["full"] }
gag = "1.0.0"
async-socks5 = "0.5.1"
async-channel = "1.7.1"
serde_json = "1.0.87"
itertools = "0.10.5"
tokio-socks = "0.5.1"
futures-timer = "3.0.2"
#torut = "0.2.1"
torut = { path = '../../torut' }
